syntax = "proto3";

package auth;


option go_package = "./pkg/pb";

// Register
message RegisterRequest {
  int32 id =1;
  string name=2;
  string sur_name=3;
  string email=4;
  string password=5;
}

message RegisterResponse {

  string error = 1;
}

// Login
message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {

  string error = 1;
  int32 id = 2;

}





// Services
service AuthService {
  rpc Register(RegisterRequest) returns (RegisterResponse) {};
  rpc Login(LoginRequest) returns (LoginResponse) {};

}